--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,16 @@ dependencies {
             'com.opencsv:opencsv:5.7.1',
             'org.slf4j:slf4j-simple:2.0.6')
     testImplementation 'org.testng:testng:7.1.0'
+    testImplementation 'io.rest-assured:rest-assured:5.3.0'
     testImplementation 'junit:junit:4.13.1'
 }
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
+}
+
+tasks.withType(Test) {
+    systemProperties(System.getProperties())
 }
 
 test {
