something has changed

--- a/build.gradle
+++ b/build.gradle
@@ -45,111 +45,112 @@ tasks.withType(Test) {
 task regress_all(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke", "Regression")
+        excludeTags("non-Prod")
     }
 }
 
-task smoke_all(type: Test) {
+task smoke_all_prod(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke")
-        excludeTags("Regression")
+        excludeTags("non-Prod", "Regression")
     }
 }
 
 task smoke_nurse(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke")
-        excludeTags("Regression", "CareCoordinator", "ClientService", "ClientAdmin", "Admin", "NetDevDir", "Developer")
+        excludeTags("non-Prod", "Regression", "CareCoordinator", "ClientService", "ClientAdmin", "Admin", "NetDevDir", "Developer")
     }
 }
 
 task regress_nurse(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke", "Regression")
-        excludeTags("CareCoordinator", "ClientService", "ClientAdmin", "Admin", "NetDevDir", "Developer")
+        excludeTags("non-Prod", "CareCoordinator", "ClientService", "ClientAdmin", "Admin", "NetDevDir", "Developer")
     }
 }
 
 task smoke_admin(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke")
-        excludeTags("Regression", "CareCoordinator", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
+        excludeTags("non-Prod", "Regression", "CareCoordinator", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
     }
 }
 
 task regress_admin(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke", "Regression")
-        excludeTags("CareCoordinator", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
+        excludeTags("non-Prod", "CareCoordinator", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
     }
 }
 
 task smoke_careCoordinator(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke")
-        excludeTags("Regression", "Admin", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
+        excludeTags("non-Prod", "Regression", "Admin", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
     }
 }
 
 task regress_careCoordinator(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke", "Regression")
-        excludeTags("Admin", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
+        excludeTags("non-Prod", "Admin", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
     }
 }
 
 task smoke_clientAdmin(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke")
-        excludeTags("Regression", "Admin", "ClientService", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
+        excludeTags("non-Prod", "Regression", "Admin", "ClientService", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
     }
 }
 
 task regress_clientAdmin(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke", "Regression")
-        excludeTags("Admin", "ClientService", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
+        excludeTags("non-Prod", "Admin", "ClientService", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
     }
 }
 
 task smoke_clientService(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke")
-        excludeTags("Regression", "Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
+        excludeTags("non-Prod", "Regression", "Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
     }
 }
 
 task regress_clientService(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke", "Regression")
-        excludeTags("Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
+        excludeTags("non-Prod", "Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
     }
 }
 
 task smoke_developer(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke")
-        excludeTags("Regression", "Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "ClientService", "Nurse")
+        excludeTags("non-Prod", "Regression", "Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "ClientService", "Nurse")
     }
 }
 
 task regress_developer(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke", "Regression")
-        excludeTags("Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "ClientService", "Nurse")
+        excludeTags("non-Prod", "Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "ClientService", "Nurse")
     }
 }
 
 task smoke_netDevDir(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke")
-        excludeTags("Regression", "Admin", "ClientAdmin", "CareCoordinator", "Developer", "ClientService", "Nurse")
+        excludeTags("non-Prod", "Regression", "Admin", "ClientAdmin", "CareCoordinator", "Developer", "ClientService", "Nurse")
     }
 }
 
 task regress_netDevDir(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke", "Regression")
-        excludeTags("Admin", "ClientAdmin", "CareCoordinator", "Developer", "ClientService", "Nurse")
+        excludeTags("non-Prod", "Admin", "ClientAdmin", "CareCoordinator", "Developer", "ClientService", "Nurse")
     }
 }
 
