--- a/build.gradle
+++ b/build.gradle
@@ -42,115 +42,21 @@ tasks.withType(Test) {
     systemProperties(System.getProperties())
 }
 
-task regress_all(type: Test) {
+task stage_regress(type: Test) {
     useJUnitPlatform {
-        includeTags("Smoke", "Regression")
-        excludeTags("non-Prod")
     }
 }
 
-task smoke_all_prod(type: Test) {
+task stage_smoke(type: Test) {
     useJUnitPlatform {
         includeTags("Smoke")
-        excludeTags("non-Prod", "Regression")
+        excludeTags("Regression")
     }
 }
 
-task smoke_nurse(type: Test) {
+task prod(type: Test) {
     useJUnitPlatform {
-        includeTags("Smoke")
-        excludeTags("non-Prod", "Regression", "CareCoordinator", "ClientService", "ClientAdmin", "Admin", "NetDevDir", "Developer")
-    }
-}
-
-task regress_nurse(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke", "Regression")
-        excludeTags("non-Prod", "CareCoordinator", "ClientService", "ClientAdmin", "Admin", "NetDevDir", "Developer")
-    }
-}
-
-task smoke_admin(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke")
-        excludeTags("non-Prod", "Regression", "CareCoordinator", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
-    }
-}
-
-task regress_admin(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke", "Regression")
-        excludeTags("non-Prod", "CareCoordinator", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
-    }
-}
-
-task smoke_careCoordinator(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke")
-        excludeTags("non-Prod", "Regression", "Admin", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
-    }
-}
-
-task regress_careCoordinator(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke", "Regression")
-        excludeTags("non-Prod", "Admin", "ClientService", "ClientAdmin", "NetDevDir", "Developer", "Nurse")
-    }
-}
-
-task smoke_clientAdmin(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke")
-        excludeTags("non-Prod", "Regression", "Admin", "ClientService", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
-    }
-}
-
-task regress_clientAdmin(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke", "Regression")
-        excludeTags("non-Prod", "Admin", "ClientService", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
-    }
-}
-
-task smoke_clientService(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke")
-        excludeTags("non-Prod", "Regression", "Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
-    }
-}
-
-task regress_clientService(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke", "Regression")
-        excludeTags("non-Prod", "Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "Developer", "Nurse")
-    }
-}
-
-task smoke_developer(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke")
-        excludeTags("non-Prod", "Regression", "Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "ClientService", "Nurse")
-    }
-}
-
-task regress_developer(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke", "Regression")
-        excludeTags("non-Prod", "Admin", "ClientAdmin", "CareCoordinator", "NetDevDir", "ClientService", "Nurse")
-    }
-}
-
-task smoke_netDevDir(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke")
-        excludeTags("non-Prod", "Regression", "Admin", "ClientAdmin", "CareCoordinator", "Developer", "ClientService", "Nurse")
-    }
-}
-
-task regress_netDevDir(type: Test) {
-    useJUnitPlatform {
-        includeTags("Smoke", "Regression")
-        excludeTags("non-Prod", "Admin", "ClientAdmin", "CareCoordinator", "Developer", "ClientService", "Nurse")
+        includeTags("Prod")
     }
 }
 
