--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -1,3 +1,5 @@
 remoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub
 browser=chrome
-version=100.0
+browserVersion=99.0
+baseUrl=https://stage.pricemds.com/
+browserSize=1920x1080
